[Added] OC-480 #comment updated from java 8 to java 17 #time 2d